--- a/templates/tourGuides/listing-success.html
+++ b/templates/tourGuides/listing-success.html
@@ -15,8 +15,8 @@
                     <div class='content has-text-centered'>
                         <h1>Listing was Successful!</h1>
                         <br>
-                        <a class='button is-center is-rounded is-info is-outlined' href="{{url_for('home')}}">
-                            Home
+                        <a class='button is-center is-rounded is-info is-outlined' href="{{url_for('ownlisting')}}">
+                            View Listings
                         </a>   
                     </div>
                                 
