--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -22,7 +22,7 @@
 
 <section class='section'>
     <div class='container'>
-        <!--Start: Dropdown-->
+        <!--START: Dropdown-->
         <div class="control">
             <div class="select">
                 <select>
@@ -35,9 +35,9 @@
         </div>
     </div>
 </section>
-        <!--End: Dropdown-->
+        <!--END: Dropdown-->
 <section>
-        <!--Start: Card -->
+        <!--START: Card -->
     <div class='container mt-5'>
         <div class='box p-5'>
             <div class="columns is-vcentered">
@@ -61,8 +61,8 @@
             </div>
         </div>
     </div>
-        <!--End: Card-->
-        <!--Start: Card -->
+        <!--END: Card-->
+        <!--START: Card -->
     <div class='container mt-5'>
         <div class='box p-5'>
             <div class="columns is-vcentered">
@@ -86,8 +86,8 @@
             </div>
         </div>
     </div>
-        <!--End: Card-->
-        <!--Start: Card -->
+        <!--END: Card-->
+        <!--START: Card -->
     <div class='container mt-5'>
         <div class='box p-5'>
             <div class="columns is-vcentered">
@@ -111,8 +111,8 @@
             </div>
         </div>
     </div>
-        <!--End: Card-->
-        <!--Start: Card -->
+        <!--END: Card-->
+        <!--START: Card -->
     <div class='container mt-5'>
         <div class='box p-5'>
             <div class="columns is-vcentered">
@@ -136,7 +136,7 @@
             </div>
         </div>
     </div>
-        <!--End: Card-->
+        <!--END: Card-->
     </div>
 </section>
 
