--- a/templates/tourGuides/business.html
+++ b/templates/tourGuides/business.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'baseTour.html' %}
 
 {% block title %}Tourister - Tours By Locals {% endblock %}
 
@@ -18,7 +18,7 @@
     <div class="container mt-5">
         <!-- START: Card 1 -->
         <div class='box p-5'>
-            <a href="{{url_for('all_bookings')}}"><i class="fas fa-chevron-left"></i>&ensp;Back to Bookings</a>
+            <a href="{{url_for('all_businesses')}}"><i class="fas fa-chevron-left"></i>&ensp;Back to Your Business</a>
             <h1 class="title is-size-1 m-0">Bishan Nightlife</h1>
             <div class="listing-author">
                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
@@ -60,13 +60,10 @@
               <div class="dropdown-menu" id="dropdown-menu-post" role="menu">
                 <div class="dropdown-content">
                   <a class="dropdown-item">
-                    Make Payment
-                  </a>
-                  <a class="dropdown-item">
-                    Request Booking Cancellation
+                    Terminate Job
                   </a>
                   <a href="{{url_for('support')}}" class="dropdown-item">
-                    Report Tour Guide
+                    Report Dispute
                   </a>
                 </div>
               </div>
@@ -83,16 +80,25 @@
                     <i class="fas fa-book"></i>
                   </span>
                   <div class="steps-content">
-                    <p class="is-size-5">Initiate Booking</p>
+                    <p class="is-size-5">Booking Initiated</p>
                   </div>
                 </li>
+
+                <li class="steps-segment">
+                    <span class="steps-marker">
+                      <i class="fas fa-route"></i>
+                    </span>
+                    <div class="steps-content">
+                      <p class="is-size-5">Propose Itinerary</p>
+                    </div>
+                  </li>
 
                 <li class="steps-segment is-active">
                   <span class="steps-marker">
                     <i class="fas fa-route"></i>
                   </span>
                   <div class="steps-content">
-                    <p class="is-size-5">Finalise Itinerary</p>
+                    <p class="is-size-5">Itinerary Confirmed</p>
                   </div>
                 </li>
 
@@ -101,7 +107,7 @@
                     <i class="fas fa-dollar-sign"></i>
                   </span>
                   <div class="steps-content">
-                    <p class="is-size-5 has-text-link">Make Payment</p>
+                    <p class="is-size-5">Payment</p>
                   </div>
                 </li>
 
@@ -124,6 +130,8 @@
     <div class='container mt-5'>
         <div class='box p-5'>
             <h2 class='is-size-3'><b>Itinerary</b></h2>
+            <a href="#" class="button is-success is-light is-size-6">
+                <i class="fas fa-edit"></i>&ensp;Edit</a>
             <div class="columns pt-5">
 
                 <!--timeline-->
