Edited review box

--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -70,14 +70,7 @@
                     <div class="media-content">
                         <div class="content">
                             <p>
-                                <strong>John Smith</strong>
-                                <small>
-                                    <span class="fas fa-star checked"></span>
-                                    <span class="fas fa-star checked"></span>
-                                    <span class="fas fa-star checked"></span>
-                                    <span class="fas fa-star"></span>
-                                    <span class="fas fa-star"></span>
-                                </small>
+                                <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
                                 <br>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
                             </p>
@@ -85,19 +78,19 @@
                         <nav class="level is-mobile">
                             <div class="level-left">
                                 <a class="level-item" aria-label="reply">
-            <span class="icon is-small">
-              <i class="fas fa-reply" aria-hidden="true"></i>
-            </span>
+                                <span class="icon is-small">
+                                    <i class="fas fa-reply" aria-hidden="true"></i>
+                                </span>
                                 </a>
                                 <a class="level-item" aria-label="retweet">
-            <span class="icon is-small">
-              <i class="fas fa-retweet" aria-hidden="true"></i>
-            </span>
+                                <span class="icon is-small">
+                                  <i class="fas fa-retweet" aria-hidden="true"></i>
+                                </span>
                                 </a>
                                 <a class="level-item" aria-label="like">
-            <span class="icon is-small">
-              <i class="fas fa-heart" aria-hidden="true"></i>
-            </span>
+                                <span class="icon is-small">
+                                  <i class="fas fa-heart" aria-hidden="true"></i>
+                                </span>
                                 </a>
                             </div>
                         </nav>
