--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                         <div class="column">
-                            <div class="box listing-img" style="background-image: url('/public/places/bishan.jpg');"></div>
+                            <div class="box listing-img" style="background-image: url('/../../public/places/bishan.jpg');"></div>
                         </div>
                     </div>
 
