--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -3,6 +3,7 @@
 {% block scripts %}
     <link rel="stylesheet" href="../../public/css/shop.css">
     <link rel="stylesheet" href="../../public/css/rating.css">
+    <link rel="stylesheet" href="../../public/css/navbar.css">
 {% endblock %}
 
 {% block content %}
