Added Report option for form

--- a/templates/helpdesk.html
+++ b/templates/helpdesk.html
@@ -26,6 +26,7 @@
                                 <div class="select">
                                     <select>
                                         <option>General Enquiries</option>
+                                        <option>Report</option>
                                         <option>Apply for Verified</option>
                                     </select>
                                 </div>
