--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-    <link rel="stylesheet" href="../../public/css/shop.css">
-    <link rel="stylesheet" href="../../public/css/rating.css">
-    <link rel="stylesheet" href="../../public/css/navbar.css">
+    <link rel="stylesheet" href="css/shop.css">
+    <link rel="stylesheet" href="css/rating.css">
+    <link rel="stylesheet" href="css/navbar.css">
 {% endblock %}
 
 {% block content %}
