--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -3,7 +3,7 @@
 {% block scripts %}
     <link rel="stylesheet" href="css/shop.css">
     <link rel="stylesheet" href="css/rating.css">
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/index.css">
 {% endblock %}
 
 {% block content %}
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                         <div class="column">
-                            <div class="box listing-img" style="background-image: url('/../../public/places/bishan.jpg');"></div>
+                            <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
                         </div>
                     </div>
 
