--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <section class='section'>
+    <section class='section pt-3'>
         <div class="content has-text-centered">
             <h1>Rate your tour experience!</h1>
         </div>
