--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -60,7 +60,7 @@
                             </div>
 
                             <div class="field">
-                                <label class="label" for="review">Leave a review</label>
+                                <label class="label is-size-5" for="review">Leave a review</label>
                                 <div class="control">
                                     <textarea class="textarea" placeholder="What were some things you enjoyed about this experience? How can it be improved?" id="review" name="review"></textarea>
                                 </div>
