--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -69,7 +69,7 @@
                             <div class="field">
                                 <label class="label" for="review-submit"></label>
                                 <div class="control">
-                                    <button id="review-submit" name="review-submit" class="button is-success is-medium is-fullwidth">Submit your review</button>
+                                    <button id="review-submit" name="review-submit" class="button is-success is-medium is-fullwidth">Submit your review!</button>
                                 </div>
                             </div>
                         </fieldset>
