Update auth pages

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -6,6 +6,21 @@
 {% endblock %}
 
 {% block content %}
+<section id="discover-hero" class="hero is-medium is-black">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
+                Tourister ID
+            </h1>
+            <h2 class="subtitle is-size-4">
+                Your pass to local tours, by locals.
+            </h2>
+        </div>
+    </div>
+</section>
+
+
+
 <section class="section">
     <div class="container" id="main">
         <div id="login">
