--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -5,11 +5,24 @@
 {% endblock %}
 
 {% block content %}
+<section id="discover-hero" class="hero is-medium is-black">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
+                Tourister ID
+            </h1>
+            <h2 class="subtitle is-size-4">
+                Your pass to local tours, by locals.
+            </h2>
+        </div>
+    </div>
+</section>
+
 <section class="section">
     <div class="container" id="main">
         <div id="register">
             <h1 class="title">Get a Tourister ID</h1>
-            <h3 class="subtitle">Your pass to local tours, by locals.</h3>
+            <h3 class="subtitle">Welcome!</h3>
             <div id="emailNotValid" class="notification is-danger" style="display: none;">
                 Email address doesn't seem to be valid.
             </div>
