Added random button

--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -27,6 +27,9 @@
                     <button class="button is-danger">
                         Search
                     </button>
+                    <button class="button is-danger">
+                        <i class="fas fa-dice"></i>
+                    </button>
                 </div>
             </div>
         </div>
